# Fulgur

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES  build.rs  deny.toml
.cargo/: audit.toml  config.toml
.github/workflows/: ci.yml  homebrew.yml  manual-test.yml  release.yml  safety.yml  security.yml  website-deploy.yml
assets/: icon.icns
licenses/: about.hbs  about.toml  generate_license_file.sh
resources/: Info.plist  fulgur.desktop
resources/linux/: Fulgur.desktop.hbs  app.fulgur.fulgur.metainfo.xml
resources/windows/: app.rc  installer.nsi
scripts/: generate_license_file.sh  icons.py  install-file-associations.sh  sync-themes.sh
src/: lib.rs  main.rs  themes.rs
src/fulgur/: components_utils.rs  content_area.rs  crypto_helper.rs  editor_tab.rs  file_operations.rs  icons.rs  languages.rs  lifecycle.rs  logger.rs  markdown_toolbar.rs  menus.rs  mod.rs  render.rs  search_bar.rs  search_replace.rs  settings.rs  shared_state.rs  state_operations.rs  state_persistence.rs  state_writer.rs  status_bar.rs  sync.rs  tab.rs  tab_bar.rs  tab_manager.rs  themes.rs  titlebar.rs  updater.rs  window_manager.rs
src/fulgur/files/: csv_support.rs  file_operations.rs  file_watcher.rs  mod.rs  sync.rs
src/fulgur/files/file_operations/: encoding.rs  mod.rs  open_ops.rs  remote_open.rs  remote_processing.rs  remote_save.rs  remote_types.rs  save_ops.rs  test_helpers.rs
src/fulgur/languages/: ada_syntax_highlighting.rs  mod.rs  supported_languages.rs
src/fulgur/languages/syntax_highlighting/: ada.rs  asm.rs  clojure.rs  d.rs  dart.rs  dockerfile.rs  erlang.rs  fortran.rs  fsharp.rs  groovy.rs  haskell.rs  ini.rs  jinja2.rs  julia.rs  matlab.rs  mod.rs  objective_c.rs  ocaml.rs  pascal.rs  perl.rs  powershell.rs  prolog.rs  r.rs  react.rs  scss.rs  vue.rs
src/fulgur/languages/syntax_highlighting/queries/: pascal_highlights.scm  pascal_locals.scm
src/fulgur/settings/: mod.rs  persistence.rs  propagation.rs  tests.rs  types.rs
src/fulgur/state/: mod.rs  operations.rs  persistence.rs  writer.rs
src/fulgur/state/operations/: decision.rs  load.rs  mod.rs  save.rs
src/fulgur/state/persistence/: bounds.rs  mod.rs  tabs.rs  timestamps.rs  windows.rs
src/fulgur/sync/: access_token.rs  mod.rs  profile_lifecycle.rs  share.rs  sse.rs  sync.rs  synchronization.rs
src/fulgur/sync/share/: compression.rs  decrypt.rs  devices.rs  fetch.rs  mod.rs  send.rs  types.rs
src/fulgur/sync/sse/: connection.rs  handlers.rs  mod.rs  types.rs
src/fulgur/sync/sse/handlers/: events.rs  mod.rs  restart.rs  tests.rs
src/fulgur/sync/ssh/: credentials.rs  error.rs  mod.rs  pool.rs  session.rs  sftp.rs  url.rs
src/fulgur/sync/ssh/session/: host_key.rs  host_patterns.rs  mod.rs  paths.rs
src/fulgur/sync/synchronization/: begin.rs  bootstrap.rs  error.rs  limits.rs  mod.rs  ping.rs  shared_files.rs  version.rs
src/fulgur/ui/: color_picker_bar_tests.rs  components_utils.rs  copy_button.rs  icons.rs  insert_button.rs  languages.rs  menus.rs  mod.rs  themes.rs
src/fulgur/ui/bars/: color_picker_bar.rs  csv_toolbar.rs  markdown_toolbar.rs  mod.rs  search_bar.rs  search_bar_actions.rs  search_replace_bar.rs  status_bar.rs  titlebar.rs
src/fulgur/ui/bars/color_picker_bar/: color.rs  mod.rs  render.rs  state.rs
src/fulgur/ui/bars/search_bar/: actions.rs  mod.rs  rendering.rs  state.rs  tests.rs
src/fulgur/ui/bars/status_bar/: mod.rs  render.rs  state.rs  widgets.rs
src/fulgur/ui/dialogs/: about.rs  file_browser.rs  file_watcher.rs  jump_line.rs  large_file_close.rs  lossy_save.rs  mod.rs  open_path.rs  open_remote.rs  path_browser.rs  remote_path_browser.rs  ssh_host_fingerprint.rs  ssh_password.rs
src/fulgur/ui/log_view/: input.rs  lifecycle.rs  mod.rs  polling.rs  tail.rs
src/fulgur/ui/notifications/: mod.rs  progress.rs  update_notification.rs
src/fulgur/ui/sheets/: edit_profile.rs  mod.rs  select_language.rs  select_theme.rs  share_file.rs
src/fulgur/ui/sheets/edit_profile/: form_state.rs  handlers.rs  mod.rs  render.rs  validation.rs
src/fulgur/ui/sheets/share_file/: actions.rs  mod.rs  state.rs  view.rs
src/fulgur/ui/tabs/: color_tag.rs  editor_tab.rs  markdown_preview_tab.rs  mod.rs  settings_tab.rs  tab.rs  tab_bar.rs  tab_drag.rs  tab_manager.rs
src/fulgur/ui/tabs/editor_tab/: constructors.rs  csv_table.rs  hex_color_provider.rs  location.rs  mod.rs  navigation.rs  operations.rs  tests.rs
src/fulgur/ui/tabs/editor_tab/csv_table/: columns.rs  delegate.rs  mod.rs  (+3 more)
src/fulgur/ui/tabs/settings_tab/: application_page.rs  editor_page.rs  mod.rs  themes_page.rs
src/fulgur/ui/tabs/tab_bar/: actions.rs  mod.rs  rendering.rs  state.rs  tests.rs
src/fulgur/ui/tabs/tab_manager/: lifecycle.rs  markdown_preview.rs  mod.rs  operations.rs  tests.rs  transfer.rs
src/fulgur/utils/: atomic_write.rs  crypto_helper.rs  http.rs  jump_list.rs  logger.rs  markdown_images.rs  mod.rs  paths.rs  retry.rs  sanitize.rs  single_instance.rs  updater.rs  utilities.rs  worker.rs
src/fulgur/utils/crypto_helper/: backend.rs  crypto.rs  keychain.rs  migration.rs  mod.rs
src/fulgur/window_manager/: dock_menu.rs  lifecycle.rs  mod.rs  render.rs  system_menus.rs  tests.rs
src/lightspeed/: components_utils.rs  editor_tab.rs  file_operations.rs  languages.rs  menus.rs  mod.rs  search_bar.rs  search_replace.rs  settings.rs  state_operations.rs  state_persistence.rs  status_bar.rs  tab.rs  tab_bar.rs  tab_manager.rs  titlebar.rs
tests/: integration_encryption.rs  integration_file_locking.rs  integration_file_watcher.rs  integration_keychain.rs  integration_settings.rs  integration_state_persistence.rs  unit_collect_events.rs  unit_encoding_detection.rs  unit_sse_event_parsing.rs  unit_sse_lifecycle.rs  unit_synchronization_error_handling.rs  unit_tab_restore_logic.rs  unit_token_state_manager.rs
tests/syntax_highlighting/: test.ada  test.asm  test.clj  test.d  test.dart  test.erl  test.f90  test.fs  test.groovy  test.hs  test.ini  test.jinja2  test.jl  test.jsx  test.pas  test.pro  test.ps1  test.r  test.scss  test.tsx  test.vue  test_matlab.m  test_objective-c.m
(+5 files in other folders)
