[package]
name = "Fulgur"
version = "0.0.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chardetng = "0.1.17"
chrono = { version = "0.4", features = ["serde"] }
encoding_rs = "0.8.35"
gpui = "0.2.2"
gpui-component = { version = "0.4.2", features = ["tree-sitter-languages"] }
log = "0.4"
lsp-types = "0.97"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
rust-embed = "8.9.0"
regex = "1.12.2"
simplelog = "0.12"
urlencoding = "2.1"
open = "5.3.3"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
product_name = "Fulgur"
identifier = "app.fulgur.fulgur"
publisher = "PRRPCHT"
icons = ["assets/icon.icns", "assets/icon.ico", "assets/icon.png"]
category = "DeveloperTool"
description = "Your lightning fast, multiplatform, themable text editor."
copyright = "Copyright (c) 2025 PRRPCHT"

[package.metadata.packager.macos]
minimum_system_version = "10.15"
info_plist_path = "resources/Info.plist"

[package.metadata.packager.windows]
# Windows file associations
file_associations = [
    # Plain text files
    { ext = "txt", description = "Text Document", mime_type = "text/plain" },

    # Markdown
    { ext = "md", description = "Markdown Document", mime_type = "text/markdown" },
    { ext = "markdown", description = "Markdown Document", mime_type = "text/markdown" },

    # JSON
    { ext = "json", description = "JSON Document", mime_type = "application/json" },

    # XML
    { ext = "xml", description = "XML Document", mime_type = "application/xml" },

    # YAML
    { ext = "yaml", description = "YAML Document", mime_type = "text/yaml" },
    { ext = "yml", description = "YAML Document", mime_type = "text/yaml" },

    # Rust
    { ext = "rs", description = "Rust Source Code", mime_type = "text/x-rust" },
    { ext = "toml", description = "TOML Configuration", mime_type = "application/toml" },

    # JavaScript/TypeScript
    { ext = "js", description = "JavaScript File", mime_type = "text/javascript" },
    { ext = "jsx", description = "JavaScript React File", mime_type = "text/javascript" },
    { ext = "ts", description = "TypeScript File", mime_type = "text/typescript" },
    { ext = "tsx", description = "TypeScript React File", mime_type = "text/typescript" },
    { ext = "mjs", description = "JavaScript Module", mime_type = "text/javascript" },
    { ext = "cjs", description = "JavaScript Module", mime_type = "text/javascript" },

    # Python
    { ext = "py", description = "Python Script", mime_type = "text/x-python" },
    { ext = "pyw", description = "Python Script", mime_type = "text/x-python" },

    # Web
    { ext = "html", description = "HTML Document", mime_type = "text/html" },
    { ext = "htm", description = "HTML Document", mime_type = "text/html" },
    { ext = "css", description = "CSS Stylesheet", mime_type = "text/css" },
    { ext = "scss", description = "SCSS Stylesheet", mime_type = "text/x-scss" },
    { ext = "sass", description = "SASS Stylesheet", mime_type = "text/x-sass" },
    { ext = "less", description = "LESS Stylesheet", mime_type = "text/x-less" },
    { ext = "vue", description = "Vue Component", mime_type = "text/x-vue" },
    { ext = "svelte", description = "Svelte Component", mime_type = "text/x-svelte" },

    # C/C++
    { ext = "c", description = "C Source Code", mime_type = "text/x-c" },
    { ext = "h", description = "C Header File", mime_type = "text/x-c" },
    { ext = "cpp", description = "C++ Source Code", mime_type = "text/x-c++" },
    { ext = "hpp", description = "C++ Header File", mime_type = "text/x-c++" },
    { ext = "cc", description = "C++ Source Code", mime_type = "text/x-c++" },
    { ext = "cxx", description = "C++ Source Code", mime_type = "text/x-c++" },
    { ext = "hh", description = "C++ Header File", mime_type = "text/x-c++" },
    { ext = "hxx", description = "C++ Header File", mime_type = "text/x-c++" },

    # Java/JVM
    { ext = "java", description = "Java Source Code", mime_type = "text/x-java" },
    { ext = "kt", description = "Kotlin Source Code", mime_type = "text/x-kotlin" },
    { ext = "scala", description = "Scala Source Code", mime_type = "text/x-scala" },

    # Other languages
    { ext = "go", description = "Go Source Code", mime_type = "text/x-go" },
    { ext = "rb", description = "Ruby Script", mime_type = "text/x-ruby" },
    { ext = "php", description = "PHP Script", mime_type = "text/x-php" },
    { ext = "swift", description = "Swift Source Code", mime_type = "text/x-swift" },
    { ext = "lua", description = "Lua Script", mime_type = "text/x-lua" },
    { ext = "pl", description = "Perl Script", mime_type = "text/x-perl" },
    { ext = "r", description = "R Script", mime_type = "text/x-r" },
    { ext = "dart", description = "Dart Source Code", mime_type = "text/x-dart" },

    # Shell
    { ext = "sh", description = "Shell Script", mime_type = "text/x-shellscript" },
    { ext = "bash", description = "Bash Script", mime_type = "text/x-shellscript" },
    { ext = "zsh", description = "Zsh Script", mime_type = "text/x-shellscript" },
    { ext = "fish", description = "Fish Script", mime_type = "text/x-shellscript" },

    # Config/Data
    { ext = "conf", description = "Configuration File", mime_type = "text/plain" },
    { ext = "cfg", description = "Configuration File", mime_type = "text/plain" },
    { ext = "ini", description = "INI Configuration File", mime_type = "text/plain" },
    { ext = "env", description = "Environment Variables", mime_type = "text/plain" },

    # Documentation
    { ext = "rst", description = "reStructuredText Document", mime_type = "text/x-rst" },
    { ext = "tex", description = "LaTeX Document", mime_type = "text/x-tex" },

    # Other
    { ext = "sql", description = "SQL Script", mime_type = "text/x-sql" },
    { ext = "csv", description = "CSV Data File", mime_type = "text/csv" },
    { ext = "log", description = "Log File", mime_type = "text/plain" },
    { ext = "diff", description = "Diff File", mime_type = "text/x-diff" },
    { ext = "patch", description = "Patch File", mime_type = "text/x-patch" },
]

[package.metadata.packager.linux]
# Linux desktop file associations
file_associations = [
    # Plain text files
    { ext = "txt", mime_type = "text/plain" },

    # Markdown
    { ext = "md", mime_type = "text/markdown" },
    { ext = "markdown", mime_type = "text/markdown" },

    # JSON
    { ext = "json", mime_type = "application/json" },

    # XML
    { ext = "xml", mime_type = "application/xml" },

    # YAML
    { ext = "yaml", mime_type = "text/yaml" },
    { ext = "yml", mime_type = "text/yaml" },

    # Rust
    { ext = "rs", mime_type = "text/x-rust" },
    { ext = "toml", mime_type = "application/toml" },

    # JavaScript/TypeScript
    { ext = "js", mime_type = "text/javascript" },
    { ext = "jsx", mime_type = "text/javascript" },
    { ext = "ts", mime_type = "text/typescript" },
    { ext = "tsx", mime_type = "text/typescript" },
    { ext = "mjs", mime_type = "text/javascript" },
    { ext = "cjs", mime_type = "text/javascript" },

    # Python
    { ext = "py", mime_type = "text/x-python" },
    { ext = "pyw", mime_type = "text/x-python" },

    # Web
    { ext = "html", mime_type = "text/html" },
    { ext = "htm", mime_type = "text/html" },
    { ext = "css", mime_type = "text/css" },
    { ext = "scss", mime_type = "text/x-scss" },
    { ext = "sass", mime_type = "text/x-sass" },
    { ext = "less", mime_type = "text/x-less" },
    { ext = "vue", mime_type = "text/x-vue" },
    { ext = "svelte", mime_type = "text/x-svelte" },

    # C/C++
    { ext = "c", mime_type = "text/x-c" },
    { ext = "h", mime_type = "text/x-c" },
    { ext = "cpp", mime_type = "text/x-c++" },
    { ext = "hpp", mime_type = "text/x-c++" },
    { ext = "cc", mime_type = "text/x-c++" },
    { ext = "cxx", mime_type = "text/x-c++" },
    { ext = "hh", mime_type = "text/x-c++" },
    { ext = "hxx", mime_type = "text/x-c++" },

    # Java/JVM
    { ext = "java", mime_type = "text/x-java" },
    { ext = "kt", mime_type = "text/x-kotlin" },
    { ext = "scala", mime_type = "text/x-scala" },

    # Other languages
    { ext = "go", mime_type = "text/x-go" },
    { ext = "rb", mime_type = "text/x-ruby" },
    { ext = "php", mime_type = "text/x-php" },
    { ext = "swift", mime_type = "text/x-swift" },
    { ext = "lua", mime_type = "text/x-lua" },
    { ext = "pl", mime_type = "text/x-perl" },
    { ext = "r", mime_type = "text/x-r" },
    { ext = "dart", mime_type = "text/x-dart" },

    # Shell
    { ext = "sh", mime_type = "text/x-shellscript" },
    { ext = "bash", mime_type = "text/x-shellscript" },
    { ext = "zsh", mime_type = "text/x-shellscript" },
    { ext = "fish", mime_type = "text/x-shellscript" },

    # Config/Data
    { ext = "conf", mime_type = "text/plain" },
    { ext = "cfg", mime_type = "text/plain" },
    { ext = "ini", mime_type = "text/plain" },
    { ext = "env", mime_type = "text/plain" },

    # Documentation
    { ext = "rst", mime_type = "text/x-rst" },
    { ext = "tex", mime_type = "text/x-tex" },

    # Other
    { ext = "sql", mime_type = "text/x-sql" },
    { ext = "csv", mime_type = "text/csv" },
    { ext = "log", mime_type = "text/plain" },
    { ext = "diff", mime_type = "text/x-diff" },
    { ext = "patch", mime_type = "text/x-patch" },
]